--- a/Escape/Config/DefaultEngine.ini
+++ b/Escape/Config/DefaultEngine.ini
@@ -2,13 +2,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/NewMap.NewMap
 GameDefaultMap=/Game/Maps/NewMap.NewMap
-GlobalDefaultGameMode="/Script/Escape.EscapeGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/MyEscapeGameModeBase_BP.MyEscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -50,7 +53,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
 
